--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -8,10 +8,8 @@ body {
   bottom: 0;
   width: 100%;
   color:#FFFFFF;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
   background-color:#001529;
+  text-align: center;
 }
 
 
