--- a/client/src/components/App/app.css
+++ b/client/src/components/App/app.css
@@ -4,3 +4,18 @@ html {
   
  
 }
+
+#page-container{
+  position: relative;
+  min-height:100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
