--- a/client/src/components/LandingPage/style.css
+++ b/client/src/components/LandingPage/style.css
@@ -1,10 +1,72 @@
-
-html,body{
-  height:auto;
-  width:auto;
+html,
+body {
+  height: auto;
+  width: auto;
 }
-
 
 .ant-carousel .slick-slide h3 {
   color: #fff;
+}
+
+.text {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #f2f2f2;
+  background:#3A312F;
+  border-radius: 2px;
+  font-size: 75px;
+  line-height: 74px;
+  font-weight: 700;
+  margin: 0 5px 24px;
+  float: left;
+  padding: 10px;
+  margin: 0 5px 24px;
+  font-family: "sans serif";
+}
+
+.caption {
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Arial";
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.2em;
+  line-height: 1.1em;
+  margin: 0px;
+  text-align: center;
+  text-transform: uppercase;
+  color:white;
+ 
+}
+
+@media only screen and (max-width: 1000px) {
+  .caption {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Arial";
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.2em;
+    line-height: 1.1em;
+    margin: 0px;
+    text-align: center;
+    text-transform: uppercase;
+    color:white;
+   
+  }
+}
+
+
+.darken{
+  background-image: 
+  linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ),
 }
